fix: products tags

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "checks": "tsc --noEmit && eslint",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "lucide-react": "^0.563.0",
