--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "next build"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
